--- a/crates/goose-cli/Cargo.toml
+++ b/crates/goose-cli/Cargo.toml
@@ -59,6 +59,7 @@ is-terminal = "0.4.16"
 anstream = "0.6.18"
 url = "2.5.7"
 open = "5.3.2"
+libc = { version = "0.2.177", package = "libc" }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
