--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -89,6 +89,7 @@
     "tw-animate-css": "^1.4.0",
     "unist-util-visit": "^5.0.0",
     "uuid": "^13.0.0",
+    "ws": "^8.18.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -119,6 +120,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/ws": "^8.18.1",
     "@types/yauzl": "^2.10.3",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
@@ -157,5 +159,9 @@
     "src/**/*.{css,json}": [
       "prettier --write"
     ]
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.9",
+    "utf-8-validate": "^6.0.5"
   }
 }
