--- a/.github/workflows/update-health-dashboard.yml
+++ b/.github/workflows/update-health-dashboard.yml
@@ -26,11 +26,12 @@ jobs:
     
     steps:
       - name: 'Download previous metrics'
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v6
         with:
           name: health-metrics
           path: .
-        continue-on-error: true
+          workflow: update-health-dashboard.yml
+          if_no_artifact_found: ignore
         
       - name: 'Update Dashboard'
         uses: actions/github-script@v7
