--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-crates/goose/src/agents/snapshots/*.snap linguist-language=Markdown
+crates/goose/src/agents/snapshots/*.snap linguist-language=Text
