--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -103,6 +103,7 @@ unicode-normalization = "0.1"
 oauth2 = "5.0.0"
 schemars = { version = "1.0.4", default-features = false, features = ["derive"] }
 insta = "1.43.2"
+bytes = "1.10.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
