--- a/scripts/test-subrecipes-examples/project_analyzer.yaml
+++ b/scripts/test-subrecipes-examples/project_analyzer.yaml
@@ -2,17 +2,36 @@ version: 1.0.0
 title: Project Analyzer
 description: Analyze project codebase using parallel subrecipes for file statistics and code patterns
 instructions: You are a code analysis assistant that examines project structure and code patterns.
+parameters:
+  - key: target_directory
+    input_type: string
+    requirement: optional
+    default: "."
+    description: "Directory to analyze"
+  - key: include_tests
+    input_type: string
+    requirement: optional
+    default: "true"
+    description: "Whether to include test files in analysis"
 prompt: |
-  Analyze the codebase in the current directory using two subrecipes sequentially:
+  Analyze the codebase in {{ target_directory }} using two subrecipes sequentially:
     - use file_stats subrecipe to gather file statistics
-    - use code_patterns subrecipe to analyze code patterns
+    - use code_patterns subrecipe to analyze code patterns and look for TODOs
   
   After both complete, create a summary report at ./analysis_report.md combining their findings.
+  {% if include_tests == "true" %}
+  Make sure to include test files in the analysis.
+  {% endif %}
 sub_recipes:
   - name: file_stats
     path: "./subrecipes/file_stats.yaml"
+    values:
+      directory: "{{ target_directory }}"
   - name: code_patterns
     path: "./subrecipes/code_patterns.yaml"
+    values:
+      directory: "{{ target_directory }}"
+      include_tests: "{{ include_tests }}"
 extensions:
   - type: builtin
     name: developer
