--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -67,6 +67,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-opentelemetry = "0.28"
 opentelemetry = "0.27"
+opentelemetry-appender-tracing = "0.27"
 opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
 opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
 tonic = "0.12"
