--- a/scripts/test-subrecipes-examples/project_analyzer.yaml
+++ b/scripts/test-subrecipes-examples/project_analyzer.yaml
@@ -14,26 +14,23 @@ parameters:
     default: "true"
     description: "Whether to include test files in analysis"
 prompt: |
-  Analyze the codebase in {{ target_directory }} using two subrecipes sequentially:
-    - use file_stats subrecipe to gather file statistics
-    - use code_patterns subrecipe to analyze code patterns and look for TODOs
-  
-  After both complete, create a summary report at ./analysis_report.md combining their findings.
-  {% if include_tests == "true" %}
-  Make sure to include test files in the analysis.
-  {% endif %}
-sub_recipes:
-  - name: file_stats
-    path: "./subrecipes/file_stats.yaml"
-    values:
-      directory: "{{ target_directory }}"
-  - name: code_patterns
-    path: "./subrecipes/code_patterns.yaml"
-    values:
-      directory: "{{ target_directory }}"
-      include_tests: "{{ include_tests }}"
+  Run two subrecipes sequentially:
+    - use file_stats subrecipe to gather file statistics for {{ target_directory }}
+    - use code_patterns subrecipe to analyze code patterns in {{ target_directory }}
 extensions:
   - type: builtin
     name: developer
     timeout: 300
     bundled: true
+sub_recipes:
+  - name: file_stats
+    path: "./subrecipes/file_stats.yaml"
+    values:
+      directory: "{{ target_directory }}"
+      fast_mode: "true"
+  - name: code_patterns
+    path: "./subrecipes/code_patterns.yaml"
+    values:
+      directory: "{{ target_directory }}"
+      include_tests: "{{ include_tests }}"
+      fast_mode: "true"
