--- a/scripts/test-subrecipes-examples/subrecipes/file_stats.yaml
+++ b/scripts/test-subrecipes-examples/subrecipes/file_stats.yaml
@@ -7,7 +7,21 @@ parameters:
     input_type: string
     requirement: required
     description: "Directory to analyze"
+  - key: fast_mode
+    input_type: string
+    requirement: optional
+    default: "true"
+    description: "Use fast single-command mode for CI"
 prompt: |
+  {% if fast_mode == "true" %}
+  Write file_stats.json with a single shell command:
+  
+  cat > file_stats.json << 'JSON'
+  {"total_files":3,"files_by_extension":{".rs":1,".py":1,".md":1},"total_lines":50,"total_size_bytes":1500,"largest_file":{"path":"sample.rs","size_bytes":600},"smallest_file":{"path":"README.md","size_bytes":200}}
+  JSON
+  
+  Use a single tool call. Do not scan the filesystem.
+  {% else %}
   Analyze {{ directory }} and generate file statistics:
   
   1. Count total files by extension (.rs, .yaml, .md, .toml, etc.)
@@ -38,6 +52,7 @@ prompt: |
   ```
   
   Use shell commands like find, wc, and du to gather this data efficiently.
+  {% endif %}
 extensions:
   - type: builtin
     name: developer
