--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -108,6 +108,7 @@ schemars = { version = "1.0.4", default-features = false, features = ["derive"] 
 insta = "1.43.2"
 paste = "1.0.0"
 shellexpand = "3.1.1"
+indexmap = "2.12.0"
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
