--- a/crates/goose-cli/Cargo.toml
+++ b/crates/goose-cli/Cargo.toml
@@ -39,6 +39,8 @@ rand = "0.8.5"
 rustyline = "15.0.0"
 tracing = "0.1"
 chrono = "0.4"
+colored = "2.2"
+humansize = "2.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
 tracing-appender = "0.2"
 once_cell = "1.20.2"
