fix: update Husky prepare script to v9 format
Signed-off-by: sheikhlimon <sheikhlimon404@gmail.com>

--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -35,7 +35,7 @@
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "prepare": "cd ../.. && husky install",
+    "prepare": "husky",
     "start-alpha-gui": "ALPHA=true npm run start-gui"
   },
   "dependencies": {
