we should run this on main and also test open models at least via openrouter

--- a/.github/workflows/pr-smoke-test.yml
+++ b/.github/workflows/pr-smoke-test.yml
@@ -2,6 +2,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       branch:
@@ -16,7 +19,7 @@ jobs:
   check-fork:
     runs-on: ubuntu-latest
     # Skip entire workflow for PRs from forks (they don't have access to secrets)
-    if: github.event_name == 'workflow_dispatch' || github.event.pull_request.head.repo.full_name == github.repository
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - run: echo "Not a fork PR - proceeding with smoke tests"
 
