--- a/crates/goose-server/Cargo.toml
+++ b/crates/goose-server/Cargo.toml
@@ -39,6 +39,11 @@ reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "blocking", "m
 tokio-util = "0.7.15"
 uuid = { version = "1.11", features = ["v4"] }
 serde_path_to_error = "0.1.20"
+tokio-tungstenite = "0.28.0"
+url = "2.5.7"
+rand = "0.9.2"
+hex = "0.4.3"
+dirs = "6.0.0"
 
 [[bin]]
 name = "goosed"
