feat(navigation): replace CSS transitions with framer-motion spring animations
- Add framer-motion dependency (^11.15.0)
- Implement spring physics for drawer open/close animation
  - Stiffness: 300, Damping: 30, Mass: 0.8 for natural feel
  - Replaces inconsistent CSS transitions (700ms open, 1000ms close)
- Add content slide animation with spring physics
- Enhance tile entrance animations with spring and scale effects
  - 30ms stagger between tiles (reduced from 50ms)
  - Smooth fade-in with scale from 0.9 to 1.0
- Add interactive hover/tap animations on navigation buttons
  - whileHover: scale 1.02
  - whileTap: scale 0.98
- Replace max-height animation with height: auto for better performance
- Integrate drag state animations with spring physics

Benefits:
- Natural, organic animation feel with physics-based motion
- Consistent timing for open and close (adaptive spring)
- Better performance using GPU-accelerated transforms
- Proper exit animations with AnimatePresence
- Built-in reduced-motion support from framer-motion

--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -64,6 +64,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "electron-log": "^5.4.3",
+    "framer-motion": "^11.15.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^6.6.2",
     "electron-window-state": "^5.0.3",
