october 2025 community spotlight

--- a/documentation/src/pages/community/data/config.json
+++ b/documentation/src/pages/community/data/config.json
@@ -29,7 +29,12 @@
       "id": "september-2025",
       "display": "September 2025",
       "file": "september-2025.json"
+    },
+    {
+      "id": "october-2025",
+      "display": "October 2025",
+      "file": "october-2025.json"
     }
   ],
-  "defaultMonth": "september-2025"
+  "defaultMonth": "october-2025"
 }
