Add Tiptap DocumentEditor with rich text editing capabilities
- Add comprehensive Tiptap dependencies for rich text editing
- Create DocumentEditor component with full toolbar and formatting options
- Support for Markdown, HTML, and plain text files
- Auto-save with Ctrl+S, file format conversion
- Integration with sidecar system for side-by-side editing
- Add DocumentEditor options to SidecarInvoker menu
- Support for creating new documents or editing existing files

--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -70,6 +70,30 @@
     "express": "^5.1.0",
     "framer-motion": "^11.11.17",
     "gsap": "^3.13.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "@tiptap/extension-placeholder": "^2.8.0",
+    "@tiptap/extension-document": "^2.8.0",
+    "@tiptap/extension-paragraph": "^2.8.0",
+    "@tiptap/extension-text": "^2.8.0",
+    "@tiptap/extension-bold": "^2.8.0",
+    "@tiptap/extension-italic": "^2.8.0",
+    "@tiptap/extension-underline": "^2.8.0",
+    "@tiptap/extension-strike": "^2.8.0",
+    "@tiptap/extension-code": "^2.8.0",
+    "@tiptap/extension-code-block": "^2.8.0",
+    "@tiptap/extension-heading": "^2.8.0",
+    "@tiptap/extension-bullet-list": "^2.8.0",
+    "@tiptap/extension-ordered-list": "^2.8.0",
+    "@tiptap/extension-list-item": "^2.8.0",
+    "@tiptap/extension-blockquote": "^2.8.0",
+    "@tiptap/extension-horizontal-rule": "^2.8.0",
+    "@tiptap/extension-link": "^2.8.0",
+    "@tiptap/extension-image": "^2.8.0",
+    "@tiptap/extension-table": "^2.8.0",
+    "@tiptap/extension-table-row": "^2.8.0",
+    "@tiptap/extension-table-cell": "^2.8.0",
+    "@tiptap/extension-table-header": "^2.8.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
